--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   dart_nats: ^0.6.1
   flutter_highlighter: ^0.1.1
+  loader_overlay: ^2.2.0
 
 dev_dependencies:
   flutter_test:
