--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   dart_nats: ^0.6.1
   flutter_highlighter: ^0.1.1
   loader_overlay: ^2.2.0
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
