--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_highlighter: ^0.1.1
   loader_overlay: ^2.2.0
   provider: ^6.0.5
+  flutter_markdown: ^0.6.15
 
 dev_dependencies:
   flutter_test:
