--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -89,11 +89,11 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.dematic" "\0"
+            VALUE "CompanyName", "com.nverbeek" "\0"
             VALUE "FileDescription", "nats_client_flutter" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
             VALUE "InternalName", "nats_client_flutter" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2023 com.dematic. All rights reserved." "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2023 com.nverbeek. All rights reserved." "\0"
             VALUE "OriginalFilename", "nats_client_flutter.exe" "\0"
             VALUE "ProductName", "nats_client_flutter" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
