--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,3 +19,15 @@ jobs:
      - run: flutter pub get
      - run: flutter config --enable-windows-desktop
      - run: flutter build windows
+  build-linux:
+   runs-on: ubuntu-latest
+   steps:
+     - uses: actions/checkout@v3
+     - uses: subosito/flutter-action@v2
+       with:
+         channel: 'stable'
+     - run: |
+        sudo apt-get update -y
+        sudo apt-get install -y ninja-build libgtk-3-dev
+     - run: flutter config --enable-linux-desktop
+     - run: flutter build linux
