Preference persistence added.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   loader_overlay: ^2.2.0
   provider: ^6.0.5
   flutter_markdown: ^0.6.15
+  shared_preferences: ^2.2.0
 
 dev_dependencies:
   flutter_test:
