--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,9 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  dart_nats:
-    git:
-      url: https://github.com/CoryHagerman/dart-nats.git
+  dart_nats: ^0.6.2
   flutter_highlighter: ^0.1.1
   loader_overlay: ^2.2.0
   provider: ^6.0.5
