Disabling SHA docker tag for non-tag workflow builds

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -131,7 +131,7 @@ jobs:
           images: ${{ env.IMG_NAME }}
           tags: |
             type=semver,pattern={{version}}
-            type=raw,value={{sha}}
+            type=raw,value={{sha}},enable=${{ github.ref_type != 'tag' }}
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
         if: ${{ github.ref_type == 'tag' }}
