--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,13 +35,16 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  dart_nats: ^0.6.2
+  dart_nats:
+    git:
+      url: https://github.com/nverbeek/dart-nats.git
   flutter_highlighter: ^0.1.1
   loader_overlay: ^4.0.0
   provider: ^6.0.5
   flutter_markdown: ^0.7.1
   shared_preferences: ^2.2.0
   package_info_plus: ^8.0.0
+  file_picker: ^8.0.3
 
 dev_dependencies:
   flutter_test:
