App now remembers and restores window size and position

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   shared_preferences: ^2.2.0
   package_info_plus: ^8.0.0
   file_picker: ^8.0.3
+  window_manager: ^0.3.8
 
 dev_dependencies:
   flutter_test:
