--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,18 +34,18 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.8
   dart_nats:
     git:
       url: https://github.com/nverbeek/dart-nats.git
   flutter_highlighter: ^0.1.1
-  loader_overlay: ^4.0.0
-  provider: ^6.0.5
-  flutter_markdown: ^0.7.1
-  shared_preferences: ^2.2.0
-  package_info_plus: ^8.0.0
-  file_picker: ^8.0.3
-  window_manager: ^0.3.8
+  loader_overlay: ^5.0.0
+  provider: ^6.1.2
+  flutter_markdown: ^0.7.6+1
+  shared_preferences: ^2.5.1
+  package_info_plus: ^8.2.1
+  file_picker: ^8.3.2
+  window_manager: ^0.4.3
 
 dev_dependencies:
   flutter_test:
@@ -56,7 +56,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.1
+  flutter_lints: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
