--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   flutter_highlighter: ^0.1.1
   loader_overlay: ^5.0.0
   provider: ^6.1.2
-  flutter_markdown: ^0.7.6+1
+  markdown_widget: ^2.3.2+8
   shared_preferences: ^2.5.1
   package_info_plus: ^8.2.1
   file_picker: ^10.1.9
