--- a/scripts/package.json
+++ b/scripts/package.json
@@ -7,7 +7,7 @@
     "generate": "node generate_icons.js"
   },
   "dependencies": {
-    "sharp": "^0.33.0",
-    "png-to-ico": "^2.1.8"
+    "png-to-ico": "^2.1.8",
+    "sharp": "^0.34.2"
   }
-} 
+}
